<resources>
    <string name="app_name">SmartMenu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eat">Eat</string>
    <string name="easy">Easy</string>
    <string name="full_contactless_experience">Full contactless experience</string>
    <string name="from_ordering_to_paying_that_s_all_contactless">From ordering to paying, that’s all contactless</string>
    <string name="sign_up_later">Sign up later</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_get_started">Let’s Get Started 😁</string>
    <string name="sign_up_or_login_into_to_have_a_full_digital_experience_in_our_restaurant">Sign up or login into to have a full digital experience in our restaurant</string>
    <string name="or">OR</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="what_s_your_email">What’s your email? 📨</string>
    <string name="we_need_it_to_search_after_your_account_or_create_a_new_one">We need it to search after your account or create a new one</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="gram_bistro">Gram Bistro</string>
    <string name="let_s_find_the_perfect_dish_for_you">Let’s find the perfect dish for you</string>
    <string name="choose_virtual_assistant">Choose Virtual Assistant</string>
    <string name="simplify_your_decisions_through_our_smart_menu">Simplify your decisions through our Smart Menu</string>
    <string name="go_to_the_menu">Go to the menu</string>
    <string name="if_you_already_know_what_to_order_this_is_the_best_choice">If you already know what to order, this is the best choice</string>
    <string name="getting_started">Getting started! ✌️</string>
    <string name="look_like_you_are_new_to_us_create_an_account_for_a_complete_experience">Look like you are new to us! Create an account for a complete experience.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="verify_code">Verify Code ⚡️</string>
    <string name="sent">We just sent a 4-digit verification code to robert.fox@gmail.com. Enter the code in the box below to continue.</string>
    <string name="didn_t_receive_a_code">Didn’t receive a code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="set_your_locations">Set your locations 📍</string>
    <string name="choose_the">Choose the simply way, scan your QR Code from our table</string>
    <string name="select_location_manually">Select location manually</string>
    <string name="if_you">If you prefer to add your location manually, here is your option</string>
    <string name="share_your_location_with_us_to_order">Share your location with us to order</string>
    <string name="please_enter">Please enter your location or allow access to your location to find all restaurants that are near you</string>
    <string name="conti">Continue</string>
    <string name="enter_a_new_location">Enter a new location</string>
    <string name="_790_8th_ave_new_york">790 8th Ave, New York</string>
    <string name="bin_71">Bin 71</string>
    <string name="_792_8th_ave_new_york">792 8th Ave, New York</string>
    <string name="_794_8th_ave_new_york">794 8th Ave, New York</string>
    <string name="sushi_bar">Sushi Bar</string>
    <string name="hello_i_m_your_virtual_assistant">Hello! 👋 \n I’m your virtual assistant.</string>
    <string name="in_order">In order to find the best suited choices for you, please answer the next few questions.</string>
    <string name="great_let_s_start">Great, let’s start</string>
    <string name="take_me_to_the_menu">Take me to the menu</string>
    <string name="it_seems_like_we_already_know_each_other">It seems like we already know each other 🤝</string>
</resources>