<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GettingFragment"
    android:background="@color/back_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/getting_started"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="116dp"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/need"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:text="@string/look_like_you_are_new_to_us_create_an_account_for_a_complete_experience"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:layout_marginTop="14dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="36dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        app:layout_constraintTop_toBottomOf="@id/need"
        android:background="@drawable/input_back"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:textColorHint="@color/light_grey"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:background="@drawable/input_back"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:textColorHint="@color/light_grey"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="34dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        app:layout_constraintTop_toBottomOf="@id/mail"
        android:background="@drawable/input_back"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:hint="@string/phone_number"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:textColorHint="@color/light_grey"
        android:drawableStart="@drawable/divider_vertical"
        android:drawablePadding="10dp"
        android:paddingStart="68dp"
        android:paddingEnd="16dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="51dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/number"
        android:background="@drawable/input_back"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:hint="@string/password"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:textColorHint="@color/light_grey"
        android:drawableEnd="@drawable/eye"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>