<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VirtualFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cat"
        android:background="@drawable/cat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hello"
        android:text="@string/hello_i_m_your_virtual_assistant"
        app:layout_constraintTop_toBottomOf="@id/cat"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_order"
        app:layout_constraintTop_toBottomOf="@id/hello"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:layout_marginHorizontal="24dp"
        android:letterSpacing="0.08"
        android:layout_marginTop="14dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:background="@drawable/sign_button"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/great_let_s_start"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="38dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_me_to_the_menu"
        android:textColor="@color/purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        android:textAlignment="center"
        android:layout_marginBottom="26dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>