<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AuthenticationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:text="@string/let_s_get_started"
            android:textSize="26sp"
            android:textColor="@color/dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign"
            android:text="@string/sign_up_or_login_into_to_have_a_full_digital_experience_in_our_restaurant"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/start"
            android:layout_marginHorizontal="25dp"
            android:lineHeight="28dp"
            android:textAlignment="center"
            android:layout_marginTop="14dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_btn"
            android:background="@drawable/sign_button"
            app:layout_constraintTop_toBottomOf="@id/sign"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="56dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divider1"
            android:src="@drawable/divider"
            app:layout_constraintTop_toBottomOf="@id/start_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="23dp"
            android:layout_marginStart="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/start_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divider2"
            android:src="@drawable/divider"
            app:layout_constraintTop_toBottomOf="@id/start_btn"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facebook"
            android:background="@drawable/brand_btn"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="23dp"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            android:drawableStart="@drawable/facebook"
            android:paddingHorizontal="36dp"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/brand_btn"
            app:layout_constraintTop_toBottomOf="@id/facebook"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            android:text="@string/continue_with_gmail"
            android:textAllCaps="false"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            android:drawableStart="@drawable/google"
            android:paddingHorizontal="36dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/later"
        android:text="@string/sign_up_later"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="44dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/light_purple"/>
</androidx.constraintlayout.widget.ConstraintLayout>