<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CodeFragment"
    android:background="@color/back_color">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:background="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verify"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:text="@string/verify_code"
        android:textSize="22sp"
        android:textColor="@color/dark_blue"
        android:textAlignment="center"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sent"
        android:text="@string/sent"
        app:layout_constraintTop_toBottomOf="@id/verify"
        android:textSize="16sp"
        android:textColor="@color/light_grey"
        android:layout_marginHorizontal="24dp"
        android:lineHeight="28dp"
        android:textAlignment="center"
        android:layout_marginTop="14dp"
        android:letterSpacing="0.1"/>

    <com.chaos.view.PinView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otp"
        app:itemCount="4"
        app:layout_constraintTop_toBottomOf="@id/sent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        app:itemSpacing="54dp"
        app:itemRadius="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/otp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/receive"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/didn_t_receive_a_code"
            android:textSize="16sp"
            android:textColor="@color/light_grey"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp"
            android:textColor="@color/light_orange"
            app:layout_constraintLeft_toRightOf="@id/receive"
            android:layout_marginStart="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>